# summer-internship

./: .gitignore  README.md
flight_cockpit/: .gitignore  CMakeLists.txt  README.md
flight_cockpit/backup_xpc_20260712_102713/: pfd_xplane.c  pfd_xplane.h  test_xpc.c  xplaneConnect.c  xplaneConnect.h
flight_cockpit/src/: cockpit.c  cockpit.h  main.c  test.c  test_xpc.c
flight_cockpit/src/EICAS1/: eicas1_data.c  eicas1_data.h  eicas1_main.c  eicas1_ui.c  eicas1_ui.h
flight_cockpit/src/EICAS2/: eicas2_data.c  eicas2_data.h  eicas2_main.c  eicas2_ui.c  eicas2_ui.h
flight_cockpit/src/FMC/: README.md  fmc_connect.c  fmc_connect.h  fmc_data.c  fmc_data.h  fmc_display.c  fmc_display.h  fmc_event.c  fmc_event.h  fmc_key.c  fmc_key.h  fmc_main.c
flight_cockpit/src/MAP/: README.md  map_data.c  map_data.h  map_main.c  map_ui.c  map_ui.h
flight_cockpit/src/ND/: nd_data.c  nd_data.h  nd_main.c  nd_ui.c  nd_ui.h  nd_xplane.c  nd_xplane.h
flight_cockpit/src/PFD/: pfd_data.c  pfd_data.h  pfd_instruments.c  pfd_instruments.h  pfd_main.c  pfd_ui.c  pfd_ui.h  pfd_xplane.c  pfd_xplane.h
flight_cockpit/src/Util/: SDL_Util.c  SDL_Util.h  cockpit_alarm.c  cockpit_alarm.h  route_ipc.c  route_ipc.h  xplaneConnect.c  xplaneConnect.h
个人报告/: 个人报告-贾元鑫.docx
实训日志/: 实训日志-贾元鑫.backup-20260706.doc  实训日志-贾元鑫.doc
本科实习手册电子版-航空舱系统/: 本科实习手册电子版-航空舱系统（贾元鑫+2507020110）.docx
答辩ppt/: ND_EICAS答辩展示（个人）.pptx  小组答辩PPT（组长：徐耀华+组员：贾元鑫，陈乐喧，黄成斌）.pptx
需求分析报告/: 航空驾驶舱模拟系统项目需求分析报告.tex
