cmake_minimum_required(VERSION 3.16)
project(flight_cockpit VERSION 1.0 LANGUAGES C)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build")

find_package(PkgConfig REQUIRED)
pkg_check_modules(SDL2 REQUIRED IMPORTED_TARGET sdl2)
pkg_check_modules(SDL2_IMAGE REQUIRED IMPORTED_TARGET SDL2_image)
pkg_check_modules(SDL2_TTF REQUIRED IMPORTED_TARGET SDL2_ttf)
pkg_check_modules(SDL2_GFX REQUIRED IMPORTED_TARGET SDL2_gfx)
pkg_check_modules(CURL REQUIRED IMPORTED_TARGET libcurl)
pkg_check_modules(CJSON REQUIRED IMPORTED_TARGET libcjson)

set(BASE_LIBS PkgConfig::SDL2 PkgConfig::SDL2_IMAGE)
set(DISPLAY_LIBS ${BASE_LIBS} PkgConfig::SDL2_TTF PkgConfig::SDL2_GFX m)
set(XPLANE_SOURCE src/Util/xplaneConnect.c)

function(enable_project_warnings target)
  if(MSVC)
    target_compile_options(${target} PRIVATE /W4)
  else()
    target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic)
  endif()
  target_compile_definitions(${target} PRIVATE SDL_MAIN_HANDLED)
  if(WIN32)
    target_link_libraries(${target} PRIVATE ws2_32)
  endif()
endfunction()

function(add_display_pair name)
  set(sources ${ARGN})
  add_executable(${name} ${sources})
  target_link_libraries(${name} PRIVATE ${DISPLAY_LIBS})
  enable_project_warnings(${name})
  add_executable(${name}_XPlane ${sources} ${XPLANE_SOURCE})
  target_compile_definitions(${name}_XPlane PRIVATE ENABLE_XPLANE)
  target_link_libraries(${name}_XPlane PRIVATE ${DISPLAY_LIBS})
  enable_project_warnings(${name}_XPlane)
endfunction()

add_display_pair(PFD src/PFD/pfd_main.c src/PFD/pfd_ui.c src/PFD/pfd_data.c src/PFD/pfd_instruments.c src/PFD/pfd_xplane.c)
add_display_pair(ND src/ND/nd_main.c src/ND/nd_ui.c src/ND/nd_data.c src/ND/nd_xplane.c src/Util/route_ipc.c)
add_display_pair(EICAS1 src/EICAS1/eicas1_main.c src/EICAS1/eicas1_ui.c src/EICAS1/eicas1_data.c)
add_display_pair(EICAS2 src/EICAS2/eicas2_main.c src/EICAS2/eicas2_ui.c src/EICAS2/eicas2_data.c)
add_display_pair(FMC src/FMC/fmc_main.c src/FMC/fmc_display.c src/FMC/fmc_event.c src/FMC/fmc_data.c src/FMC/fmc_key.c src/FMC/fmc_connect.c src/Util/route_ipc.c)

add_executable(MAP src/MAP/map_main.c src/MAP/map_ui.c src/MAP/map_data.c ${XPLANE_SOURCE})
target_compile_definitions(MAP PRIVATE ENABLE_XPLANE)
target_link_libraries(MAP PRIVATE ${DISPLAY_LIBS} PkgConfig::CURL PkgConfig::CJSON)
enable_project_warnings(MAP)

add_executable(Cockpit src/main.c src/cockpit.c src/Util/cockpit_alarm.c ${XPLANE_SOURCE})
target_link_libraries(Cockpit PRIVATE ${BASE_LIBS} PkgConfig::SDL2_GFX m)
enable_project_warnings(Cockpit)

enable_testing()
add_test(NAME cockpit_self_test COMMAND Cockpit --self-test)
add_test(NAME fmc_self_test COMMAND FMC --self-test)
add_test(NAME nd_self_test COMMAND ND --self-test)
add_test(NAME map_self_test COMMAND MAP --self-test)
